# FMI-stuff

./: .gitignore  README.md
CC/: README.md  base1 to base2.turing  prob1.turing  prob6.turing
CN/: gauss.m  t12.m  t13.m  t18.m
DAW-proiect-camerafy/: camerafy.sln
DAW-proiect-camerafy/camerafy/: Global.asax  Site.master  Web.config
FMI/CC/: base2*base2.turing  prob8.turing
FMI/CN/: t14.m  t16.m
FMI/SGBD/: lab7.sql  model-test-data-backup-1.sql  plsql_1_3.sql  psql_3_ex2.sql  trigger.sql
FMI/TC/: README.md
FMI/TO/: MetSecantei.m
FMI/TS/: VeleaAlexandru-MetRespingerii.r  lab2.r  lab5.r  lab8.r
IP-proiect-ratingify/: .gitignore  README.md  script.py
OOP-proiect/: GUIDELINES.md  README.md  Trie.h  custom_menus.hpp  diff.hpp  diff_test_a.cpp  diff_test_b.cpp  main.cpp  menu.hpp  oxford.txt  plain.txt  trie.hpp
PAO-proiect-reteleCoolinare/: README.md
PAO-proiect-reteleCoolinare/dataBase/: db.sql
PAO-proiect-reteleCoolinare/src/: client.java  config.java  server.java
RUBY-optional-proiect-stinge-lumina/: .rubocop.yml  Gemfile  package.json
SGBD/: lab6-2.sql  model-test-plsql-1.sql  plsql_1_2.sql  plsql_1_5-7.sql  psql_1_ex5.sql  psql_2.sql  psql_2_ex1.sql  psql_2_ex2.sql  psql_3_ex1.sql  psql_3_ex3.sql  psql_3_ex4.sql  psql_4_ex5.sql  test.sql  test_lab_velea.sql
SO/: .gitignore  a16.c  all_homeworks.txt  compile_all.sh  create_testdata.sh  d6.c  f1.c  f13.c  f15.c  f9.c  selected_homeworks.txt  utils.h
SO-proiect-trace-children/: .gitignore  CMakeLists.txt  README.md
SO-proiect-trace-children/src/: print_process_stats.h  utils.h
SO/a2/: check_sorting  (+11 more)
TO/: MetBisectiei.m  MetNewthonRaphson.m
TS/: VeleaAlexandru-SimulareaSistemelorCuEvenimenteDiscrete.r  lab1.r  lab6.r
(+90 files in other folders)
